리팩토링 및 문제점 수정